<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/summer_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background = "@color/blue"
        android:alpha="0.5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_png"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding = "28dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "Registrati"
                    android:textColor = "@color/blue"
                    android:textSize = "32sp"
                    android:textStyle = "bold"
                    android:layout_gravity="center"/>


            </LinearLayout>


            <!-- Nome EditText -->
            <EditText
                android:id="@+id/editTextNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Nome*"
                android:inputType="text"/>

            <!-- Cognome EditText -->
            <EditText
                android:id="@+id/editTextCognome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextNome"
                android:layout_marginTop="8dp"
                android:hint="Cognome*"
                android:inputType="text"/>

            <!-- Numero di telefono EditText -->
            <EditText
                android:id="@+id/editTextTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEmail"
                android:layout_marginTop="8dp"
                android:hint="Numero di telefono*"
                android:inputType="phone"/>

            <!-- Email EditText -->
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextCognome"
                android:layout_marginTop="8dp"
                android:hint="Email*"
                android:inputType="textEmailAddress"/>

            <!-- Password EditText -->
            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextTelefono"
                android:layout_marginTop="8dp"
                android:hint="Password*"
                android:inputType="textPassword"/>

            <!-- Conferma password EditText -->
            <EditText
                android:id="@+id/edit_conferma_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextPassword"
                android:layout_marginTop="8dp"
                android:hint="Conferma password*"
                android:inputType="textPassword"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/continua_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Continua"
                app:cornerRadius="28dp"
                android:backgroundTint="@color/blue"
                android:alpha="0.7"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>