<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/summer_background"
    tools:context=".activity.CompletaProfiloActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background = "@color/blue"
        android:alpha="0.5">

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="50dp"
        app:cardCornerRadius="28dp">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp">

            <ImageView
                android:id = "@+id/profile_picture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/profile_picture"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/change_image_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cambia immagine"
                android:textSize="18sp"
                app:cornerRadius="5dp"
                app:elevation = "8dp"
                android:layout_marginTop = "15dp"
                android:layout_marginHorizontal="15dp"
                android:layout_gravity = "center_horizontal"
                app:backgroundTint="@color/light_blue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Definisci il tuo stile"
                android:textSize="18sp"
                android:textStyle = "bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop = "35dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop = "15dp"
                android:layout_gravity = "center_horizontal">

                <LinearLayout
                    android:id = "@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/scelta1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:buttonTint="@color/light_blue"
                        android:text = "@string/scelta1"/>
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/scelta3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:buttonTint="@color/light_blue"
                        android:text = "@string/scelta3"/>
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/scelta5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:buttonTint="@color/light_blue"
                        android:text = "@string/scelta5"/>
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/scelta7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:buttonTint="@color/light_blue"
                        android:text = "@string/scelta7"/>
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/scelta9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:buttonTint="@color/light_blue"
                        android:text = "@string/scelta9"/>

                </LinearLayout>

                <LinearLayout
                    android:id = "@+id/linearLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/linearLayout2"
                    android:layout_marginLeft =  "25dp">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/scelta2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:buttonTint="@color/light_blue"
                        android:text = "@string/scelta2"/>
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/scelta4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:buttonTint="@color/light_blue"
                        android:text = "@string/scelta4"/>
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/scelta6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:buttonTint="@color/light_blue"
                        android:text = "@string/scelta6"/>
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/scelta8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:buttonTint="@color/light_blue"
                        android:text = "@string/scelta8"/>
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/scelta10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:buttonTint="@color/light_blue"
                        android:text = "@string/scelta10"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/registrati_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registrati"
                android:textSize="14sp"
                app:cornerRadius="5dp"
                app:elevation = "8dp"
                android:layout_gravity = "center_horizontal"
                android:layout_marginTop = "35dp"
                app:backgroundTint="@color/light_blue"/>

        </LinearLayout>





    </androidx.cardview.widget.CardView>

</RelativeLayout>